# chunkloris-paper

./: .gitignore  ARXIV-SUBMISSION.md  LICENSE  README.md
paper/: Makefile  main.bbl  main.tex
paper/bib/: references.bib
paper/figures/: matrix_table.tex
paper/sections/: 00-abstract.tex  01-introduction.tex  02-background.tex  02b-related.tex  03-methodology.tex  04-perframework.tex  05-synthesis.tex  06-rootcause.tex  07-threat.tex  08-mitigation.tex  09-disclosure.tex  10-recommendations.tex  11-future.tex  12-conclusion.tex
replication/: README.md
replication/data/: all.json  schema.json  wave1.json  wave2.json  wave3.json
replication/docs/: methodology.md  paper-scope.md
replication/figures/: matrix_table.tex
replication/harness/wave1/: go.md  jvm.md  node.md  rust.md
replication/harness/wave2/: beam.md  c.md  dotnet.md  extended-python.md  ruby.md
replication/harness/wave2/c/: nginx-as-proxy-measurement.md
replication/harness/wave2/dotnet/: Dockerfile.kestrel  Program.cs  probe-modeA.py  probe-modeB.py  probe.py
replication/harness/wave3/: http2.md  websocket.md
replication/harness/wave3/http2/: run_one.sh  (+1 more)
replication/harness/wave3/http2/servers/rust-hyper-h2/: Cargo.toml  Dockerfile
replication/harness/wave3/http2/servers/rust-hyper-h2/src/: main.rs
replication/results/: matrix.md
replication/scripts/: _common.py  bench_pinned.py  merge_wave_results.py  render_all.sh  render_ecosystem_bar.py  render_matrix.py  render_mode_a_vs_b.py  render_protocol_compare.py  render_scaling.py  render_us_per_chunk.py  render_verdict_pie.py
(+123 files in other folders)
